[package]
name = "hashlife"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.4.0"

[dependencies]
anyhow = "1.0"
crossterm = "0.28.1"
env_logger = "0.11.7"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
